# edit_transfer_selection_interface

./: .gitignore  CMakeLists.txt  README.md
include/: ChannelEditsManager.h  ChannelSelector.h  ChannelStat.h  EditTransferScreen.h  GLTexture.h  MaskEdit.h  MultiPassImageView.h  ParameterOptimisation.h  Segmentor.h  jwh_util.h
lib/nanogui/include/nanogui/: common.h  glutil.h  imagepanel.h  imageview.h  screen.h  widget.h
lib/nanogui/src/: common.cpp  example1.cpp  glutil.cpp  imagepanel.cpp  imageview.cpp  layout.cpp  widget.cpp
scenes/car/: _.GI.exr  _.aboverLigthSpec.exr  _.cameraLightSpec.exr  _.exr  _.reflect.exr  _.selfIllum.exr
scenes/wine/: _.BackLight_Reflection.exr  _.BackLight_Refraction.exr  _.FrontLight_Reflection.exr  _.FrontLight_Refraction.exr  _.RedLight_Reflection.exr  _.RedLight_Refraction.exr  _.WhiteLight_Reflection.exr  _.WhiteLight_Refraction.exr
shaders/: multipass.frag  multipass.vert
src/: ChannelEditsManager.cpp  ChannelSelector.cpp  ChannelStat.cpp  EditTransferScreen.cpp  GLTexture.cpp  MaskEdit.cpp  MultiPassImageView.cpp  ParameterOptimisation.cpp  Segmentor.cpp  main.cpp
